# noir-bench

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  bench-config.toml  bench_changes.diff
.github/workflows/: bench-nightly.yml  bench.yml
examples/: run_examples.sh  suite_base.yml  suite_ultrahonk.yml
examples/evm-verify/: README.md  foundry.toml
examples/evm-verify/contracts/: Verifier.sol
examples/evm-verify/test/: Verify.t.sol
examples/merkle_verify/: Nargo.toml  Prover.16.toml  Prover.32.toml  Prover.8.toml  Prover.toml  main.nr
examples/merkle_verify/src/: main.nr
examples/range_bits/: Nargo.toml  Prover.16.toml  Prover.32.toml  Prover.8.toml  Prover.toml  main.nr
examples/range_bits/src/: main.nr
examples/simple_hash/: Nargo.toml  Prover.toml  main.nr
examples/simple_hash/src/: main.nr
examples/unconstrained_sort/: Nargo.toml  Prover.toml
examples/unconstrained_sort/src/: main.nr
reports/: generate_report.py
scripts/ci/: check_core_schema_unchanged.sh
src/: ci_cmd.rs  compare_cmd.rs  evm_verify_cmd.rs  exec_cmd.rs  gates_cmd.rs  history_cmd.rs  lib.rs  main.rs  prove_cmd.rs  suite_cmd.rs  verify_cmd.rs
src/backend/: barretenberg.rs  mock.rs  mod.rs  traits.rs
src/bench/: backend.rs  bench_cmd.rs  config.rs  mod.rs
src/core/: env.rs  mod.rs  schema.rs
src/engine/: mod.rs  provenance.rs  toolchain.rs  workflow.rs
src/history/: build.rs  html.rs  mod.rs  run_html.rs  schema.rs
src/logging/: csv_logger.rs  mod.rs
src/report/: html.rs  mod.rs  regression.rs
src/storage/: csv.rs  jsonl.rs  mod.rs
tests/: backend_integration.rs  compare_regression_fixture.rs  engine_workflow_integration.rs  exec_smoke.rs  gates_fake_backend.rs  gates_smoke.rs  html_snapshot.rs  jsonl_integration.rs  jsonl_snapshot.rs  prove_generic_smoke.rs  verify_generic_smoke.rs
tests/fixtures/: bench_record_v1.json
