[package]
name = "noir_bench"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Benchmark suite for Noir execution and proving"
authors = ["The Noir Team <team@noir-lang.org>"]

[lib]
name = "noir_bench"
path = "src/lib.rs"

[[bin]]
name = "noir-bench"
path = "src/main.rs"

[dependencies]
# Workspace crates
nargo = { path = "../../tooling/nargo" }
noir_artifact_cli = { package = "noir_artifact_cli", path = "../../tooling/artifact_cli" }
noirc_artifacts = { path = "../../tooling/noirc_artifacts" }
noirc_abi = { path = "../../tooling/noirc_abi" }
noirc_evaluator = { path = "../../compiler/noirc_evaluator" }
noirc_driver = { path = "../../compiler/noirc_driver" }
acvm = { path = "../../acvm-repo/acvm" }
acir = { package = "acir", path = "../../acvm-repo/acir" }
bn254_blackbox_solver = { path = "../../acvm-repo/bn254_blackbox_solver" }

# CLI and utils
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
color-eyre = "0.6.2"
anyhow = "1.0"
im = "15.1"
tempfile = "3.10"

# Flamegraph
inferno = "0.11.19"
fm = { path = "../../compiler/fm" }
noirc_errors = { path = "../../compiler/noirc_errors" }

# Time and system
time = { version = "0.3", features = ["formatting"] }

# Optional memory tracking
sysinfo = { version = "0.30", optional = true }

[features]
mem = ["sysinfo"]

[dev-dependencies]
# For tests
noirc_frontend = { path = "../../compiler/noirc_frontend" } 