[package]
name = "noir_bench"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Benchmark suite for Noir execution and proving"
authors = ["The Noir Team <team@noir-lang.org>"]

[lib]
name = "noir_bench"
path = "src/lib.rs"

[[bin]]
name = "noir-bench"
path = "src/main.rs"

[dependencies]
# Compiler/tooling crates
nargo = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.11", package = "nargo" }
noir_artifact_cli = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.11", package = "noir_artifact_cli" }
noirc_artifacts = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.11", package = "noirc_artifacts" }
noirc_abi = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.11", package = "noirc_abi" }
noirc_evaluator = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.11", package = "noirc_evaluator" }
noirc_driver = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.11", package = "noirc_driver" }
fm = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.11", package = "fm" }
noirc_errors = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.11", package = "noirc_errors" }
# ACVM crates
acvm = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.11", package = "acvm" }
acir = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.11", package = "acir" }
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.11", package = "bn254_blackbox_solver" }

# CLI and utils
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
csv = "1.3"
thiserror = "1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
color-eyre = "0.6.2"
anyhow = "1.0"
im = "15.1"
tempfile = "3.10"
shlex = "1.3.0"
sha256 = "1.5"

# Flamegraph
inferno = "0.11.19"

# Time and system
time = { version = "0.3", features = ["formatting"] }

# System info (always on); memory sampling guarded by cfg(feature = "mem")
sysinfo = { version = "0.30" }

[features]
mem = []

[dev-dependencies]
# For tests
noirc_frontend = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.11", package = "noirc_frontend" } 